--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
-    <circular-progress-bar class="progress" value="24" is-animated is-hidden />
+    <circular-progress-bar class="progress">
+      <h2 slot="title" class="circular-progress-bar__title">Progress</h2>
+      <circular-progress-bar-loader slot="loader">
+      </circular-progress-bar-loader>
+      <circular-progress-bar-settings slot="settings" value="12">
+      </circular-progress-bar-settings>
+    </circular-progress-bar>
   </body>
 </html>
