--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <main class="main">
-      <circular-progress-bar class="progress">
+      <circular-progress-bar>
         <h2 slot="title" class="circular-progress-bar__title">Progress</h2>
         <circular-progress-bar-loader slot="loader">
         </circular-progress-bar-loader>
